tests/ui/rfcs/rfc-2632-const-trait-impl/super-traits-fail-3.ny.stderr
error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:14:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:14:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:14:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:14:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: `~const` can only be applied to `#[const_trait]` traits
  --> $DIR/super-traits-fail-3.rs:14:19
   |
LL | trait Bar: ~const Foo {}
   |                   ^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 5 previous errors

